--- a/package.json
+++ b/package.json
@@ -1,24 +1,57 @@
 {
-  "name": "bin-ui-design",
+  "name": "@bin/ui",
   "version": "0.0.1",
-  "private": true,
+  "keywords": [
+    "bin-ui-design",
+    "bin-ui-next",
+    "bin-ui",
+    "bin",
+    "ui",
+    "vue",
+    "vue3",
+    "components"
+  ],
+  "author": "wangbin",
+  "files": [
+    "dist",
+    "es",
+    "lib"
+  ],
+  "homepage": "https://wangbin3162.gitee.io/bin-ui-design/",
+  "type": "module",
+  "main": "./lib/src/index.js",
+  "module": "./es/src/index.mjs",
+  "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qddidi/easyest"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "build-css": "postcss src/_styles/index.css -o output.css",
+    "build": "pnpm clean-lib && pnpm build:lib && pnpm build:style",
+    "clean-lib": "rimraf dist && rimraf es && rimraf lib",
+    "build:lib": "vite build",
+    "build:style": "gulp --require @esbuild-kit/cjs-loader -f build/build-style.ts",
     "test": "vitest",
+    "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "release": "release-it"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "color": "^4.2.3",
+    "dayjs": "^1.11.9",
+    "resize-observer-polyfill": "^1.5.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@esbuild-kit/cjs-loader": "^2.4.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/gulp": "^4.0.13",
+    "@types/gulp-autoprefixer": "^0.0.34",
+    "@types/gulp-postcss": "^8.0.3",
     "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -39,16 +72,25 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-postcss": "^9.0.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
     "postcss-each-variables": "^0.3.0",
     "postcss-for": "^2.1.1",
+    "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "sucrase": "^3.34.0",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
+    "vite-plugin-dts": "^3.5.2",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.6"
   }
