--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,6 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"]
   },
-  "include": [
-    "src/**/*.vue",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "demo/**/*.vue",
-    "demo/**/*.ts",
-    "demo/**/*.tsx"
-  ],
+  "include": ["src/**/*.vue", "src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
