--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bin/ui",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.0",
   "keywords": [
     "bin-ui-design",
     "bin-ui-next",
@@ -24,18 +24,19 @@
   "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/qddidi/easyest"
+    "url": "https://github.com/wangbin3162/bin-ui-design"
   },
   "scripts": {
     "dev": "vite",
-    "build": "pnpm clean-lib && pnpm build:lib && pnpm build:style",
-    "clean-lib": "rimraf dist && rimraf es && rimraf lib",
+    "build": "pnpm run gen-version && pnpm clean && pnpm build:lib && pnpm build:style",
+    "clean": "rimraf dist es lib",
     "build:lib": "vite build",
     "build:style": "gulp --require @esbuild-kit/cjs-loader -f build/build-style.ts",
     "test": "vitest",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
+    "gen-version": "node build/gen-version.cjs",
     "release": "release-it"
   },
   "dependencies": {
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@esbuild-kit/cjs-loader": "^2.4.2",
+    "@release-it/conventional-changelog": "^7.0.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/gulp": "^4.0.13",
@@ -72,6 +74,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
+    "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
@@ -85,6 +88,7 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.0.0",
+    "release-it": "^16.1.5",
     "rimraf": "^5.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "sucrase": "^3.34.0",
