--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bin/ui",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "keywords": [
     "bin-ui-design",
     "bin-ui-next",
@@ -37,7 +37,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "gen-version": "node build/gen-version.cjs",
-    "release": "release-it"
+    "release": "release-it",
+    "release-alpha": "release-it patch --preReleaseId=alpha --npm.tag=alpha --github.preRelease"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
