--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bin-ui-design",
-  "version": "0.0.2-beta.0",
+  "version": "0.0.2",
   "keywords": [
     "bin-ui-design",
     "bin-ui-next",
