--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "gen-version": "node build/gen-version.cjs",
-    "release": "release-it",
-    "release-alpha": "release-it patch --preReleaseId=alpha --npm.tag=alpha"
+    "gen-version": "node build/gen-version.cjs"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -50,7 +48,6 @@
   },
   "devDependencies": {
     "@esbuild-kit/cjs-loader": "^2.4.2",
-    "@release-it/conventional-changelog": "^7.0.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/gulp": "^4.0.13",
@@ -90,7 +87,6 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.0.0",
-    "release-it": "^16.1.5",
     "rimraf": "^5.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "sucrase": "^3.34.0",
