--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@popperjs/core": "^2.11.8",
     "color": "^4.2.3",
     "dayjs": "^1.11.10",
+    "mitt": "^3.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sortablejs": "^1.15.0",
     "vue": "^3.3.7"
