--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "async-validator": "^4.2.5",
     "color": "^4.2.3",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sortablejs": "^1.15.0",
